--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,12 @@
 {
-  "singleQuote": true
+  "tabWidth": 2,
+  "useTabs": false,
+  "singleQuote": true,
+  "semi": true,
+  "bracketSpacing": true,
+  "trailingComma": "all",
+  "bracketSameLine": true,
+  "embeddedLanguageFormatting": "auto",
+  "arrowParens": "always",
+  "printWidth": 140
 }
