--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "@books/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "start": "nx run books:serve:development --port=4202",
+    "start-prod": "nx run books:serve:production --port=4202",
+    "build": "nx build",
+    "test": "nx test"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "~17.2.0",
@@ -13,7 +18,18 @@
     "@angular/platform-browser": "~17.2.0",
     "@angular/platform-browser-dynamic": "~17.2.0",
     "@angular/router": "~17.2.0",
+    "@jsverse/transloco-preload-langs": "^7.0.0",
+    "@ngneat/transloco": "^6.0.4",
+    "@ngrx/effects": "^17.1.0",
+    "@ngrx/router-store": "^17.1.0",
+    "@ngrx/store": "^17.1.0",
+    "@ngrx/store-devtools": "^17.1.0",
     "@nx/angular": "18.1.3",
+    "@types/lodash-es": "^4.17.12",
+    "lodash-es": "^4.17.21",
+    "primeflex": "^3.3.1",
+    "primeicons": "^6.0.1",
+    "primeng": "^17.7.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
